Handle spaces in pre-shell commands

Switches to using KShell::splitArgs to build the list of arguements
to feed to KProcess instead of doing it here. As a bonus, tilde
expansion works now as well.

This patch also adds a check to ensure the connection only gets
set up once.

BUG:317046